Bug 1274933: Reject data promise when EOS is encountered following waiting for data. r=gerald

MozReview-Commit-ID: 1hKplz5wFnJ